# BabelFlow

./: BabelFlowConfig.cmake  CMakeLists.txt  README.md
CMake/: FindBabelFlow.cmake  FindCharm.cmake  FindDataFlow.cmake
examples/: CMakeLists.txt
examples/DoNothing/: CMakeLists.txt  DoNothingTaskGraph.cpp  DoNothingTaskGraph.h  main.cpp
examples/broadcast/: Broadcast.cpp  Broadcast.h  BroadcastCallbacks.h  BroadcastGraph.cpp  BroadcastGraph.h  CMakeLists.txt  main.cpp
examples/broadcast/charm/: CMakeLists.txt  broadcast.ci  main.cpp
examples/broadcast/mpi/: CMakeLists.txt  main.cpp
examples/hierarchical-reduction/: CMakeLists.txt  HierarchicalReduction.cpp  HierarchicalReduction.h  main.cpp
examples/kwaymerge/: CMakeLists.txt  KWayMerge.cpp  KWayMerge.h  KWayTaskMap.cpp  KWayTaskMap.h  main.cpp
examples/kwaymerge/mpi/: CMakeLists.txt  main.cpp
examples/mapreduce/: CMakeLists.txt  MapReduceCallback.h  MapReduceGraph.cpp  MapReduceGraph.h
examples/mapreduce/mpi/: CMakeLists.txt  main.cpp
examples/pmt/: CMakeLists.txt  KWayMerge.cpp  KWayMerge.h  KWayTaskMap.h
examples/pmt/charm/: CMakeLists.txt  main.cpp  pmt.ci
examples/pmt/mergetree/: AugmentedMergeTree.cpp  AugmentedMergeTree.h  BoundaryTreeExtractor.cpp  BoundaryTreeExtractor.h  LocalCorrectionAlgorithm.cpp  LocalCorrectionAlgorithm.h  MergeTree.cpp  MergeTree.h  SortedJoinAlgorithm.cpp  SortedJoinAlgorithm.h  SortedUnionFindAlgorithm.cpp  SortedUnionFindAlgorithm.h
examples/pmt/mpi/: CMakeLists.txt  main.cpp
examples/radixk/: CMakeLists.txt  CompositingUtils.cpp  CompositingUtils.h
examples/radixk/charm/: CMakeLists.txt  main.cpp  radixk.ci
examples/radixk/legion/: CMakeLists.txt  main.cpp
examples/radixk/mpi/: CMakeLists.txt  main.cpp
examples/reduce_all/: CMakeLists.txt  ReduceAllCallbacks.h  ReduceAllGraph.cpp  ReduceAllGraph.h
examples/reduce_all/mpi/: CMakeLists.txt  main.cpp
examples/reduction/: CMakeLists.txt  Reduction.cpp  Reduction.h  ReductionCallbacks.h  ReductionGraph.cpp  ReductionGraph.h  main.cpp  main2.cpp
examples/reduction/charm/: CMakeLists.txt  main.cpp  reduction.ci
examples/reduction/legion/: CMakeLists.txt  main.cpp
examples/reduction/mpi/: CMakeLists.txt  main.cpp
idxio/: read_block.cpp  read_block.h  visus_simpleio.cpp  visus_simpleio.h  visus_simpleio_types.h
scripts/uberenv/: project.json
scripts/uberenv/spack_configs/darwin/: compilers.yaml
spack/: repo.yaml
src/: CMakeLists.txt  ComposableTaskGraph.cpp  ComposableTaskGraph.h  ComposableTaskMap.cpp  ComposableTaskMap.h  Controller.cpp  Controller.h  DefGraphConnector.cpp  DefGraphConnector.h  Definitions.h  DownSizeGhostTaskGraph.hpp  DynamicTaskGraph.cpp  DynamicTaskGraph.h  HierarchicalTask.cpp  HierarchicalTask.h  HierarchicalTaskGraph.cpp  HierarchicalTaskGraph.h  ModTaskMap.hpp  ModuloMap.cpp  ModuloMap.h  MultiGraphConnector.cpp  MultiGraphConnector.h  Payload.h  PreProcessInputTaskGraph.cpp  PreProcessInputTaskGraph.hpp  RelayTask.h  Task.cpp  Task.h  TaskGraph.cpp  TaskGraph.h  TaskGraphConnector.h  TypeDefinitions.h
src/charm/: CMakeLists.txt  CharmTask.cpp  CharmTask.h  CharmTaskGraph.h  Controller.cpp  Controller.h  charm_babelflow.ci  charm_dataflow.ci
src/legion/: CMakeLists.txt  Controller.cc  Controller.h  DataFlowMapper.cc  DataFlowMapper.h  SPMDController.cc  SPMDController.h  SPMDUtils.h  Utils.cc  Utils.h  cgmapper.cc  datatypes.h
src/mpi/: CMakeLists.txt  Controller.cpp  Controller.h  Payload.h
src/reduce/: BinarySwap.cpp  BinarySwap.h  BinarySwapTaskMap.cpp  BinarySwapTaskMap.h  KWayReduction.cpp  KWayReduction.h  KWayReductionTaskMap.cpp  KWayReductionTaskMap.h  RadixKExchange.cpp  RadixKExchange.h  RadixKExchangeTaskMap.cpp  RadixKExchangeTaskMap.h  SingleTaskGraph.cpp  SingleTaskGraph.h  SingleTaskMap.cpp  SingleTaskMap.h
src/vlr/: BinarySwap.cpp  BinarySwap.h  BinarySwapTaskMap.cpp  KWayReduction.cpp  KWayReduction.h  KWayReductionTaskMap.h  RadixKExchange.cpp  RadixKExchange.h
